Fixed Header alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -4,10 +4,14 @@ body {
 }
 
 /* Header */
-header {
+#header-container {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  flex-direction: column;
   align-items: center;
+  justify-content: space-around;
+  padding: 10px 10px 10px 10px;
+  width: auto;
   width: 100%;
   position: fixed;
   z-index: 1;
@@ -20,24 +24,21 @@ header {
   background-size: cover;
 }
 
-#header-content {
+.name {
   display: flex;
-  flex-direction: column;
-  justify-content: space-between; /* Adjust this to control the space between header and navbar */
-  align-items: center;
-  width: 100%;
-}
-
-#name {
+  flex-wrap: wrap;
+  justify-content:center;
   font-size: 25px;
-  padding-left: 20px;
+  width: 100%;
+  text-align: center;
 }
 
 #nav {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  text-align: center;
   order: 1;
-  width: 100%;
 }
 
 #nav-list {
@@ -45,15 +46,14 @@ header {
   padding: 0;
   display: flex;
   flex-wrap: wrap;
-  align-items: center;
   margin: 0;
-  text-align: center;
+  justify-content: center;
 }
 
 #nav li {
   font-size: 18px;
   font-weight: bold;
-  margin-left: 15px;
+  margin: 0px 5px 0px 5px;
 }
 
 #nav li a {
@@ -68,13 +68,6 @@ header {
   text-shadow: 1px 1px 7px rgba(255, 255, 255, 0.5);
 }
 
-/* Media query for smaller screens */
-@media (max-width: 768px) {
-  #header-content {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-}
 
 /* Profile */
 #profile-container {
@@ -124,6 +117,7 @@ h1, h3 {
   font-size: 18px;
 }
 
+/* Portfolio */
 #portfolio-container {
   display: flex;
   flex-wrap: wrap;
@@ -134,7 +128,6 @@ h1, h3 {
   height: 100%;
   padding: 20px 20px 50px 20px;
 }
-
 
 .portfolio {
   display: flex;
@@ -294,7 +287,7 @@ h1, h3 {
   border-radius: 5px;
   box-shadow: 2px 2px 10px #333;
   margin: auto;
-  width: 60%;
+
 }
 #contact-form {
   width: 100%;
@@ -349,12 +342,6 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
   background-color:  black;
-}
-
-.form-group input,
-.form-group textarea,
-button[type="submit"] {
-  margin-left: 15px;
 }
 
 .form-group {
